--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
-  "name": "4.iv",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "html-template-string": "^1.2.6"
-  },
-  "devDependencies": {
-    "chai": "^4.3.7",
-    "mocha": "^10.1.0"
-  }
+    "name": "4.iv",
+    "version": "1.0.0",
+    "description": "",
+    "main": "public/index.js",
+    "author": "Ja Superior",
+    "license": "MIT",
+    "scripts": {
+        "build": "tsc",
+        "prepare": "yarn build",
+        "version": "git add -A",
+        "postversion": "git push && git push --tags"
+    },
+    "dependencies": {
+        "html-template-string": "^1.2.6"
+    },
+    "devDependencies": {
+        "chai": "^4.3.7",
+        "mocha": "^10.1.0",
+        "prettier": "^2.7.1",
+        "tslint": "^6.1.3",
+        "tslint-config-prettier": "^1.18.0",
+        "typescript": "^4.8.4"
+    }
 }
