--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@oneii3/4iv",
-    "version": "1.0.0",
+    "version": "0.0.2",
     "description": "",
     "main": "public/index.js",
     "author": "ja.superior",
@@ -22,9 +22,9 @@
         "chai": "^4.3.7",
         "mocha": "^10.1.0",
         "prettier": "^2.7.1",
+        "ts-mocha": "^10.0.0",
         "tslint": "^6.1.3",
         "tslint-config-prettier": "^1.18.0",
-        "typescript": "^4.8.4",
-        "ts-mocha": "^10.0.0"
+        "typescript": "^4.8.4"
     }
 }
