--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "target": "ES2017",
         "module": "commonjs",
         "declaration": true,
-        "outDir": "./public"
+        "outDir": "./public",
+        "strict": false
     },
     "include": ["lib"],
     "exclude": ["node_modules", "**/tests/*"]
