--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "version": "0.0.5",
     "description": "A novel, composable, unopinionated FRP library.",
     "main": "public/index.js",
-    "module": "public/index.js",
+    "module": "public/index.es.js",
     "author": "ja.superior",
     "license": "MIT",
     "homepage": "https://github.com/jasuperior/4.iv",
     "scripts": {
-        "build": "tsc",
+        "build": "rollup -c",
         "prepare": "yarn build",
         "version": "git add -A",
         "postversion": "git push && git push --tags",
@@ -24,6 +24,13 @@
         "chai": "^4.3.7",
         "mocha": "^10.1.0",
         "prettier": "^2.7.1",
+        "rollup": "^1.1.2",
+        "rollup-plugin-babel": "^4.3.2",
+        "rollup-plugin-commonjs": "^9.2.0",
+        "rollup-plugin-node-resolve": "^4.0.0",
+        "rollup-plugin-peer-deps-external": "^2.2.0",
+        "rollup-plugin-typescript2": "^0.19.2",
+        "rollup-plugin-url": "^2.1.0",
         "ts-mocha": "^10.0.0",
         "tslint": "^6.1.3",
         "tslint-config-prettier": "^1.18.0",
